<resources>
    <string name="app_name">Just Jokes</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="showPunchline">Show Punchline</string>
    <string name="hidePunchline">Hide Punchline</string>
    <string name="previous">Prev</string>
    <string name="next">Next</string>
    <string name="logout">Logout</string>
    <string name="remember_me">Remember Me</string>
    <string name="joke_submission">Joke Submission</string>
    <string name="sub_joke_title">Enter a Joke Title (e.g. Karate Joke, Tire Joke)</string>
    <string name="sub_joke_setup">Enter the Joke Setup</string>
    <string name="sub_joke_punchline">Enter the Joke Punchline</string>
    <string name="sub_joke_button">Submit Joke</string>
    <string name="PAGE_PREFS">tcss450team3.uw.tacoma.edu.justjokes.PREFS</string>
    <string name="PAGE_NUMBER">Stored Page Num</string>
    <string name="REMEMBER_ME">tcss450team3.uw.tacoma.edu.justjokes.PREFS</string>
    <string name="REMEMBERED">Remembered</string>
    <string name="RM_USERNAME">Stored Username</string>
    <string name="RM_PASSWORD">Stored Password</string>
</resources>
