<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tcss450team3.uw.tacoma.edu.justjokes.SubmitJokeFragment"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/jokeTitleContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/joke_title_max">
        <EditText
            android:id="@+id/sub_joke_title_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="@integer/joke_title_max"
            android:maxLines="2"
            android:scrollHorizontally="false"
            android:hint="@string/sub_joke_title"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/jokeSetupContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/joke_setup_max">
        <EditText
            android:id="@+id/sub_joke_setup_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="@integer/joke_setup_max"
            android:maxLines="3"
            android:scrollHorizontally="false"
            android:hint="@string/sub_joke_setup"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/jokePunchlineContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/joke_punchline_max">
        <EditText
            android:id="@+id/sub_joke_punchline_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="@integer/joke_punchline_max"
            android:maxLines="3"
            android:scrollHorizontally="false"
            android:hint="@string/sub_joke_punchline"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/add_course_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/sub_joke_button"
        android:onClick="addCourse"/>

</LinearLayout>
